--- a/VKApp/VKApp/Storyboards/Base.lproj/Main.storyboard
+++ b/VKApp/VKApp/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -287,32 +288,65 @@
                     <view key="view" contentMode="scaleToFill" id="XeY-K2-FnW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PHN-ah-fZl" customClass="LoadingIndicator" customModule="VKApp" customModuleProvider="target">
-                                <rect key="frame" x="172" y="438" width="70" height="21"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Awb-O4-7Pn"/>
-                                    <constraint firstAttribute="width" constant="70" id="MTT-m6-AU1"/>
-                                </constraints>
-                            </view>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Bl7-qx-3fX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="Bl7-qx-3fX" firstAttribute="bottom" secondItem="PHN-ah-fZl" secondAttribute="bottom" constant="403" id="EsN-5i-w4s"/>
-                            <constraint firstItem="PHN-ah-fZl" firstAttribute="leading" secondItem="Bl7-qx-3fX" secondAttribute="leading" constant="172" id="OXh-sn-nm4"/>
-                            <constraint firstItem="Bl7-qx-3fX" firstAttribute="trailing" secondItem="PHN-ah-fZl" secondAttribute="trailing" constant="172" id="d1m-db-aVf"/>
-                            <constraint firstItem="PHN-ah-fZl" firstAttribute="top" secondItem="Bl7-qx-3fX" secondAttribute="top" constant="394" id="rjI-E6-jz8"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="loadingIndicator" destination="PHN-ah-fZl" id="D6C-lx-n1g"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vii-l5-8Yu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="226" y="124"/>
+            <point key="canvasLocation" x="224.63768115942031" y="123.88392857142857"/>
+        </scene>
+        <!--Photo Viewer View Controller-->
+        <scene sceneID="vr8-9H-vWb">
+            <objects>
+                <viewController storyboardIdentifier="imageViewer" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6C9-su-NlY" customClass="PhotoViewerViewController" customModule="VKApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="42T-gr-6Fc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tlY-90-xF2">
+                                <rect key="frame" x="0.0" y="173" width="414" height="482"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="482" id="KbS-8T-uHV"/>
+                                    <constraint firstAttribute="width" constant="414" id="YNZ-QK-Nsy"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nQo-QI-Kqb">
+                                <rect key="frame" x="11" y="44" width="36" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal">
+                                    <imageReference key="image" image="arrow.uturn.backward.circle" catalog="system" symbolScale="large"/>
+                                </state>
+                                <connections>
+                                    <action selector="pushBack:" destination="6C9-su-NlY" eventType="touchUpInside" id="2sQ-f2-mQf"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCr-2E-XHL">
+                                <rect key="frame" x="96" y="48" width="221" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Qln-Sg-SMA"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                        <constraints>
+                            <constraint firstItem="bCr-2E-XHL" firstAttribute="centerX" secondItem="Qln-Sg-SMA" secondAttribute="centerX" id="5jM-uh-IxR"/>
+                            <constraint firstItem="tlY-90-xF2" firstAttribute="leading" secondItem="Qln-Sg-SMA" secondAttribute="leading" id="IXs-ep-GRt"/>
+                            <constraint firstItem="Qln-Sg-SMA" firstAttribute="bottom" secondItem="tlY-90-xF2" secondAttribute="bottom" constant="207" id="SKa-NT-Ou7"/>
+                            <constraint firstItem="bCr-2E-XHL" firstAttribute="top" secondItem="Qln-Sg-SMA" secondAttribute="top" constant="4" id="xFP-E6-ab1"/>
+                            <constraint firstItem="tlY-90-xF2" firstAttribute="trailing" secondItem="Qln-Sg-SMA" secondAttribute="trailing" id="y4d-x8-8kO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="headTextLabel" destination="bCr-2E-XHL" id="PVi-8W-DwW"/>
+                        <outlet property="photoImageView" destination="tlY-90-xF2" id="GG0-ho-0ta"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0ou-Zz-PNi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.97101449275374" y="-862.5"/>
         </scene>
         <!--Друзья-->
         <scene sceneID="O38-VA-JRk">
@@ -411,40 +445,55 @@
             </objects>
             <point key="canvasLocation" x="2702.898550724638" y="-175.44642857142856"/>
         </scene>
-        <!--Friends Collection View Controller-->
-        <scene sceneID="DFR-kv-o3e">
+        <!--Friends Photos View Controller-->
+        <scene sceneID="gkx-ew-4VA">
             <objects>
-                <collectionViewController storyboardIdentifier="FriendsCollectionView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qxp-PU-6pg" customClass="FriendsCollectionViewController" customModule="VKApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="XNg-rl-CsR">
+                <viewController storyboardIdentifier="FriendsCollectionView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Yf4-ET-zrp" customClass="FriendsPhotosViewController" customModule="VKApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Zc-Rn-Av4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="w7A-ze-QUo">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w33-Fu-ijK">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="HDN-PK-HZm">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="giS-wo-C9x">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Yf4-ET-zrp" id="SdO-it-24B"/>
+                                    <outlet property="delegate" destination="Yf4-ET-zrp" id="vVt-Yw-vE1"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="wzx-Ec-vO2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Byp-Hu-Sbg">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CWw-ib-CNn">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="oHw-Nn-is8">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="qxp-PU-6pg" id="7O1-e3-lbe"/>
-                            <outlet property="delegate" destination="qxp-PU-6pg" id="I0z-Ha-SHr"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" id="0un-Qi-dje"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hjy-yb-sa5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="w7A-ze-QUo" secondAttribute="bottom" id="0mo-uZ-jT9"/>
+                            <constraint firstItem="w7A-ze-QUo" firstAttribute="leading" secondItem="wzx-Ec-vO2" secondAttribute="leading" id="8gw-RU-scE"/>
+                            <constraint firstItem="w7A-ze-QUo" firstAttribute="trailing" secondItem="wzx-Ec-vO2" secondAttribute="trailing" id="fap-AN-2a2"/>
+                            <constraint firstItem="w7A-ze-QUo" firstAttribute="top" secondItem="2Zc-Rn-Av4" secondAttribute="top" id="ych-5J-6Mf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="photosCollectionView" destination="w7A-ze-QUo" id="1V3-qv-xm7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wWg-G3-22N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3504" y="-175"/>
+            <point key="canvasLocation" x="3502.898550724638" y="-175.44642857142856"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="Xcp-uv-8Yq">
@@ -469,6 +518,7 @@
     </scenes>
     <resources>
         <image name="VK_2" width="1662" height="413"/>
+        <image name="arrow.uturn.backward.circle" catalog="system" width="128" height="121"/>
         <image name="list.dash" catalog="system" width="128" height="85"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person.2" catalog="system" width="128" height="81"/>
@@ -478,6 +528,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
